--- a/consultaCNPJ/src/main/resources/application.properties
+++ b/consultaCNPJ/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/alfatec
-spring.datasource.username=root
-spring.datasource.password=0110
+spring.datasource.url=jdbc:mysql://localhost:3306/(nome_do_banco)
+spring.datasource.username=usuario
+spring.datasource.password=senha
 server.port=4444
 
 spring.jpa.hibernate.ddl-auto=update
